# kagent

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: agent.rs  config.rs  llm.rs  main.rs  skills.rs
src/tools/: browser.rs  filesystem.rs  mod.rs  search.rs  shell.rs  skill.rs
